// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownContent snapshots should match snapshot for compact variant 1`] = `
<div
  class="prose prose-sm prose-invert max-w-none
    prose-headings:text-[var(--color-text-primary)]
    prose-p:text-[var(--color-text-secondary)]
    prose-p:my-2
    prose-a:text-[var(--color-primary)]
    prose-a:underline
    prose-strong:text-[var(--color-text-primary)]
    prose-code:text-[var(--color-accent)]
    prose-code:bg-[var(--color-bg-card)]
    prose-code:px-1
    prose-code:py-0.5
    prose-code:rounded
    prose-pre:bg-[var(--color-bg-card)]
    prose-ul:text-[var(--color-text-secondary)]
    prose-ul:my-2
    prose-ol:text-[var(--color-text-secondary)]
    prose-ol:my-2
    prose-li:text-[var(--color-text-secondary)]
    prose-li:my-0"
>
  <div
    data-testid="react-markdown"
  >
    <p>
      Compact content
    </p>
  </div>
</div>
`;

exports[`MarkdownContent snapshots should match snapshot for default variant 1`] = `
<div
  class="prose prose-invert max-w-none
    prose-headings:text-[var(--color-text-primary)]
    prose-p:text-[var(--color-text-secondary)]
    prose-a:text-[var(--color-primary)]
    prose-a:underline
    prose-strong:text-[var(--color-text-primary)]
    prose-code:text-[var(--color-accent)]
    prose-code:bg-[var(--color-bg-card)]
    prose-code:px-1
    prose-code:py-0.5
    prose-code:rounded
    prose-pre:bg-[var(--color-bg-card)]
    prose-ul:text-[var(--color-text-secondary)]
    prose-ol:text-[var(--color-text-secondary)]
    prose-li:text-[var(--color-text-secondary)]"
>
  <div
    data-testid="react-markdown"
  >
    <p>
      <strong>
        Bold
      </strong>
       and 
      <em>
        italic
      </em>
       text
    </p>
  </div>
</div>
`;
